Adiciona agendamento de ofertas no Telegram
